--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "highlight.js": "^11.9.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-p5": "^1.4.1"
   },
   "devDependencies": {
     "@catppuccin/tailwindcss": "^0.1.6",
