--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "highlight.js": "^11.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-p5": "^1.4.1"
+    "react-icons": "^5.2.1",
+    "react-p5": "^1.4.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@catppuccin/tailwindcss": "^0.1.6",
