--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-p5": "^1.4.1",
+    "react-popup": "^0.11.2",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
