--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^5.2.1",
     "react-p5": "^1.4.1",
     "react-popup": "^0.11.2",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-timer-hook": "^3.0.7"
   },
   "devDependencies": {
     "@catppuccin/tailwindcss": "^0.1.6",
